# gino

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
gino/: __init__.py  __main__.py  common.py  gitlab.py  metric.py  notion.py  zoho.py
tests/: test_sanity.py
