[tool.poetry]
name = "gino"
version = "0.3.1"
description = "Gitlab <-> Notion"
authors = ["Dilawar Singh <dilawar@subcom.tech>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.scripts]
gino = 'gino.__main__:app'

[tool.poetry.dependencies]
python = ">=3.9, <4"
rich = "^13.7.1"
typer = "^0.12.3"
dateparser = "^1.2.0"
python-dotenv = "^1.0.1"
sentry-sdk = "^2.1.1"
python-gitlab = "^4.4.0"
urlextract = "^1.9.0"
validators = "^0.28.1"
notion-client = "^2.2.1"
notion2markdown = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
